# ApiMusic

./: .gitignore  .replit  .vercelignore  README.md  app.py  batch.py  bot_core.py  hcaptcha_bypass.py  info.txt  main.py  nixpacks.toml  prompts.txt  pyproject.toml  readme.txt  replit.md  requirements.txt  vercel.json
attached_assets/: New_Text_Document_1773038241001.txt  Pasted-Role-You-are-a-Senior-Python-Automation-Engineer-Your-t_1772972376319.txt  hcaptcha.bundle.js.LICENSE_1772972401346.txt  hcaptcha.bundle_1772972401345.js  hcaptcha_1772973597621.js
templates/: index.html
