[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.14.0",
    "flask>=3.1.3",
    "hcaptcha-solver>=0.2.14",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "undetected-chromedriver>=3.5.5",
]
